Completed assignment, added submission.md and finalised Dockerfile

--- a/ros2_intro_lab/Dockerfile
+++ b/ros2_intro_lab/Dockerfile
@@ -9,9 +9,12 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 COPY src /home/ros_ws/src
 
+RUN /bin/bash -c "source /opt/ros/foxy/setup.bash; cd /home/ros_ws; rosdep install --from-paths /home/ros_ws/src --ignore-src -r -y"
+
 RUN /bin/bash -c "source /opt/ros/foxy/setup.bash; cd /home/ros_ws; colcon build"
 
-RUN echo "source /home/ros_ws/install/setup.bash"
+
+RUN echo "source /home/ros_ws/install/setup.bash" >> ~/.bashrc
 
 WORKDIR /home/ros_ws
 
