--- a/ros2_intro_lab/src/lab1_pkg/CMakeLists.txt
+++ b/ros2_intro_lab/src/lab1_pkg/CMakeLists.txt
@@ -25,15 +25,20 @@ find_package(ackermann_msgs REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+add_executable(talker src/talker.cpp)
+add_executable(relay src/relay.cpp)
+ament_target_dependencies(talker rclcpp ackermann_msgs)
+ament_target_dependencies(relay rclcpp ackermann_msgs)
+
+install(TARGETS
+  talker
+  relay
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
